<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title"
                style="@style/TextStyle_24"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/card_test_text"
                android:textFontWeight="600"
                app:fontWeight="600" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detail_date"
                    style="@style/TextStyle_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/card_test_date"
                    android:textColor="@color/gray"
                    android:textFontWeight="400"
                    app:fontWeight="400"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_dday_state"
                    style="@style/TextStyle_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/detail_test_ddaystate"
                    android:textColor="@color/gray"
                    android:textFontWeight="400"
                    app:fontWeight="400"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_date" />

                <ImageView
                    android:id="@+id/detail_dday_background"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="-8dp"
                    android:layout_marginBottom="-8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_dday"
                    app:layout_constraintEnd_toEndOf="@+id/detail_dday"
                    app:layout_constraintStart_toStartOf="@+id/detail_dday"
                    app:layout_constraintTop_toTopOf="@+id/detail_dday"
                    app:srcCompat="@drawable/date_state_0" />

                <TextView
                    android:id="@+id/detail_dday"
                    style="@style/TextStyle_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/card_test_dday"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    app:fontWeight="400"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_dday_state" />

                <ImageButton
                    android:id="@+id/bookmark_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/clear"
                    android:scaleType="fitCenter"
                    android:src="@drawable/star"
                    app:layout_constraintEnd_toStartOf="@+id/map_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/map_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/clear"
                    android:scaleType="fitCenter"
                    android:src="@drawable/map_true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bookmark_text"
                    style="@style/TextStyle_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/bookmark"
                    android:textColor="@color/gray"
                    android:textFontWeight="400"
                    app:fontWeight="400"
                    app:layout_constraintEnd_toStartOf="@+id/map_text"
                    app:layout_constraintTop_toBottomOf="@+id/bookmark_button" />

                <TextView
                    android:id="@+id/map_text"
                    style="@style/TextStyle_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:text="@string/map"
                    android:textColor="@color/gray"
                    android:textFontWeight="400"
                    app:fontWeight="400"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/map_button" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="40dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/horizontal_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/detail_content"
                style="@style/TextStyle_16"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="40dp"
                android:text="@string/card_test_text2"
                android:textFontWeight="500"
                app:fontWeight="500" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>