<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_root"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="24dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/card_background" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/card_test" />

                <TextView
                    android:id="@+id/card_head"
                    style="@style/TextStyle_16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="40dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:text="@string/card_test_text"
                    android:textFontWeight="600"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textFontWeight="600" />

                <ImageButton
                    android:id="@+id/bookmark_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/clear"
                    android:src="@drawable/star"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="-2dp"
                    android:layout_marginEnd="-8dp"
                    android:layout_marginBottom="-2dp"
                    android:alpha="0.5"
                    app:layout_constraintBottom_toBottomOf="@+id/card_status"
                    app:layout_constraintEnd_toEndOf="@+id/card_status"
                    app:layout_constraintStart_toStartOf="@+id/card_status"
                    app:layout_constraintTop_toTopOf="@+id/card_status"
                    app:layout_constraintVertical_bias="0.461"
                    app:srcCompat="@drawable/status_background" />

                <TextView
                    android:id="@+id/card_status"
                    style="@style/TextStyle_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/status_0"
                    android:textColor="@color/gray"
                    android:textFontWeight="500"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"
                    app:textFontWeight="500" />

                <TextView
                    android:id="@+id/card_date"
                    style="@style/TextStyle_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/card_test_date"
                    android:textColor="@color/gray"
                    android:textFontWeight="400"
                    app:textFontWeight="400"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/imageView" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="-8dp"
                    android:layout_marginBottom="-8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    app:srcCompat="@drawable/date_state_0" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextStyle_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/card_test_dday"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/card_date"
                    app:textFontWeight="400" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/card_text"
            style="@style/TextStyle_12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/card_test_text2"
            android:textColor="@color/gray"
            android:textFontWeight="500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.0"
            app:textFontWeight="500" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>